[gd_scene load_steps=37 format=3 uid="uid://fp3cno5ifatt"]

[ext_resource type="Texture2D" uid="uid://bvmjwdp5bcu0" path="res://Enemy_Assets/boss_beaver.png" id="1_j8q5w"]
[ext_resource type="Script" path="res://Enemy_Assets/boss_beaver.gd" id="1_trpu6"]
[ext_resource type="Script" path="res://Enemy_Assets/Damageable.gd" id="2_1gdpm"]
[ext_resource type="Texture2D" uid="uid://bqh0ynnrwrqgd" path="res://Enemy_Assets/boss_beaver_damaged.png" id="2_qq4jo"]
[ext_resource type="Texture2D" uid="uid://c6pfpj5encjun" path="res://Enemy_Assets/boss_beaver_smoke.png" id="2_v35wr"]
[ext_resource type="Texture2D" uid="uid://co5805ujc38wd" path="res://Enemy_Assets/boss_beaver_fight.png" id="3_uds0w"]
[ext_resource type="Texture2D" uid="uid://5kxkl6v3ut45" path="res://Enemy_Assets/boss_beaver_walking.png" id="5_rkkuy"]
[ext_resource type="PackedScene" path="res://test_dialogue.tscn" id="8_gfjur"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yygw1"]
atlas = ExtResource("2_qq4jo")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0i6o"]
atlas = ExtResource("2_qq4jo")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3nfb"]
atlas = ExtResource("3_uds0w")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o2ix"]
atlas = ExtResource("3_uds0w")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_63sd2"]
atlas = ExtResource("3_uds0w")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oucgg"]
atlas = ExtResource("3_uds0w")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb65j"]
atlas = ExtResource("3_uds0w")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_80npa"]
atlas = ExtResource("3_uds0w")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtret"]
atlas = ExtResource("2_v35wr")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf7aa"]
atlas = ExtResource("2_v35wr")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwq7q"]
atlas = ExtResource("2_v35wr")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d34xa"]
atlas = ExtResource("2_v35wr")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocric"]
atlas = ExtResource("2_v35wr")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8lci"]
atlas = ExtResource("2_v35wr")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ixy3"]
atlas = ExtResource("1_j8q5w")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_joxop"]
atlas = ExtResource("1_j8q5w")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6unv"]
atlas = ExtResource("1_j8q5w")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nioy"]
atlas = ExtResource("1_j8q5w")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e56gf"]
atlas = ExtResource("1_j8q5w")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pd7h"]
atlas = ExtResource("1_j8q5w")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqov1"]
atlas = ExtResource("5_rkkuy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu7xj"]
atlas = ExtResource("5_rkkuy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp5vr"]
atlas = ExtResource("5_rkkuy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jowc"]
atlas = ExtResource("5_rkkuy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_u0akw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yygw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0i6o")
}],
"loop": true,
"name": &"damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3nfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o2ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63sd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oucgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb65j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80npa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb65j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oucgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63sd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o2ix")
}],
"loop": true,
"name": &"fight",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtret")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf7aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwq7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d34xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocric")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8lci")
}],
"loop": true,
"name": &"smoking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ixy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joxop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6unv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e56gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pd7h")
}],
"loop": true,
"name": &"smoking_talking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqov1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu7xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp5vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jowc")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_itmjh"]
radius = 18.0
height = 96.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eugvb"]
size = Vector2(94, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1lih"]
size = Vector2(163, 70)

[node name="BossBeaver" type="CharacterBody2D"]
script = ExtResource("1_trpu6")
walk_dist = Vector2(30, 0)

[node name="AnimatedBoss" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u0akw")
animation = &"smoking"
autoplay = "smoking"
frame = 3
frame_progress = 0.658014

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 12)
shape = SubResource("CapsuleShape2D_itmjh")

[node name="Damageable" type="Node" parent="." node_paths=PackedStringArray("sprite", "timer", "character")]
script = ExtResource("2_1gdpm")
health = 15
sprite = NodePath("../AnimatedBeaver")
timer = NodePath("../DamagedTimer")
character = NodePath("..")

[node name="DamagedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FightTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 13.5)
shape = SubResource("RectangleShape2D_eugvb")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -11.0
offset_top = -24.0
offset_right = 74.0
offset_bottom = 2.0
scale = Vector2(0.25, 0.25)
text = "interact (e)"

[node name="Dialogue" parent="." instance=ExtResource("8_gfjur")]
offset = Vector2(6600, -140)
transform = Transform2D(1, 0, 0, 1, 6600, -140)

[node name="InteractableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(5.5, 25)
shape = SubResource("RectangleShape2D_y1lih")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="InteractableArea" to="." method="_on_interactable_area_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_interactable_area_body_exited"]
